# lumenpact

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERCEL_DEPLOYMENT.md  package-lock.json  package.json  vercel.json
.github/: CODEOWNERS  dependabot.yml  labels.yml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
contracts/: Cargo.toml
contracts/commitment_escrow/: Cargo.toml
contracts/commitment_escrow/src/: errors.rs  lib.rs  storage.rs  types.rs
contracts/commitment_escrow/test_snapshots/tests/: test_cancel_after_grace_period.1.json  test_cancel_after_resolve_fails.1.json  test_cancel_before_grace_period_fails.1.json  test_cancel_by_non_creator_fails.1.json  test_create_commitment.1.json  test_create_commitment_invalid_amount.1.json  test_create_commitment_past_deadline.1.json  test_get_user_commitments.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_resolve_before_deadline_fails.1.json  test_resolve_fail.1.json  test_resolve_pass.1.json  test_resolve_wrong_judge_fails.1.json  test_submit_evidence.1.json
docs/: api.md  architecture.md  coding-standards.md  deployment.md  design-decisions.md  development.md  mobile.md  smart-contracts.md  testing.md  troubleshooting.md  zk-architecture.md
frontend/: next.config.ts  package-lock.json  package.json
scripts/: run-frontend.js  (+2 more)
(+228 files in other folders)
