[workspace]
resolver = "2"
members = [
    "commitment_escrow",
]

[workspace.dependencies]
soroban-sdk = { version = "27.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true